--- a/package.json
+++ b/package.json
@@ -35,22 +35,22 @@
   },
   "author": "Rhayven <codingforllamas@gmail.com>",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "bluebird": "^3.7.2",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "cross-env": "^7.0.2",
-    "debug": "^4.1.1",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-sslify": "^1.2.0",
-    "helmet": "^3.21.3",
-    "jwt-simple": "^0.5.6",
-    "moment": "^2.24.0",
-    "mongoose": "^5.9.3",
-    "morgan": "^1.9.1",
-    "nodemon": "^2.0.2",
-    "superagent": "^5.2.2"
+    "bcryptjs": "latest",
+    "bluebird": "latest",
+    "body-parser": "latest",
+    "cors": "latest",
+    "cross-env": "latest",
+    "debug": "latest",
+    "dotenv": "latest",
+    "express": "latest",
+    "express-sslify": "latest",
+    "helmet": "latest",
+    "jwt-simple": "latest",
+    "moment": "latest",
+    "mongoose": "latest",
+    "morgan": "latest",
+    "nodemon": "latest",
+    "superagent": "latest"
   },
   "devDependencies": {
     "eslint": "latest",
