--- a/package.json
+++ b/package.json
@@ -15,19 +15,23 @@
   ],
   "license": "MIT",
   "scripts": {
+    "rmrf": "rm -rf build && rm -rf cfl-front && rm -rf caring-child-daycare && rm -rf coverage",
+    "start:debug": "rm -rf build && tsc && npm-run-all -p ts-start ts-watch",
+    "ts-watch": "tsc -w",
     "cc": "codeclimate analyze -f html > codeclimate.html",
-    "start:debug": "DEBUG=cfl-back:* nodemon index.js",
-    "postinstall": "./postinstallcflFront.sh && ./postinstallcaringChildDaycare.sh",
+    "ts-start": "DEBUG=cfl-back:* nodemon build/index.js",
     "installglobals": "yarn global add npm@latest",
-    "dev": "nodemon index.js",
+    "build:front": "./postinstallcflFront.sh && rm -rf ./cfl-front/src && rm -rf ./cfl-front/test && ./postinstallcaringChildDaycare.sh && rm -rf ./caring-child-daycare/src && rm -rf ./caring-child-daycare/test",
+    "postinstall": "yarn rmrf && tsc && yarn build:front",
+    "rebuild:front": "./postinstallcflFront.sh && ./postinstallcaringChildDaycare.sh && yarn build:prod",
     "build:prod": "(cd cfl-front || exit; npm start -- build)",
-    "start": "node index.js",
+    "start": "node build/index.js",
     "cleaninstall": "rm -rf yarn.lock && rm -rf node_modules && yarn cache clean && yarn install",
     "node:debug": "node --inspect-brk index.js",
-    "test": "eslint . && rm -rf coverage && npm run test:jest",
-    "test:lint": "eslint . --fix",
-    "test:local": "eslint . --fix && rm -rf coverage && yarn test:jest && yarn cc",
-    "test:jest": "cross-env NODE_ENV=test && jest --no-cache --config jest.config.json --notify --detectOpenHandles --forceExit"
+    "test": "eslint ./src && rm -rf coverage && npm run test:jest",
+    "test:lint": "eslint ./src --fix",
+    "test:local": "yarn test:lint && rm -rf coverage && yarn test:jest && yarn cc",
+    "test:jest": "jest --no-cache --config jest.config.json --runInBand --detectOpenHandles --forceExit"
   },
   "repository": {
     "type": "git",
@@ -35,11 +39,22 @@
   },
   "author": "Rhayven <codingforllamas@gmail.com>",
   "dependencies": {
+    "@sendgrid/mail": "latest",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.6",
+    "@types/debug": "^4.1.5",
+    "@types/express": "^4.17.7",
+    "@types/express-sslify": "^1.2.1",
+    "@types/helmet": "latest",
+    "@types/mongoose": "^5.7.31",
+    "@types/morgan": "^1.9.1",
+    "@types/superagent": "^4.1.8",
+    "@types/supports-color": "^5.3.0",
     "bcryptjs": "latest",
-    "bluebird": "latest",
     "body-parser": "latest",
     "cors": "latest",
     "cross-env": "latest",
+    "csvtojson": "^2.0.10",
     "debug": "latest",
     "dotenv": "latest",
     "express": "latest",
@@ -50,14 +65,21 @@
     "mongoose": "latest",
     "morgan": "latest",
     "nodemon": "latest",
-    "superagent": "latest"
+    "superagent": "latest",
+    "typescript": "latest"
   },
   "devDependencies": {
+    "@types/jest": "latest",
+    "@types/supertest": "latest",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
     "eslint": "latest",
     "eslint-config-airbnb": "latest",
+    "eslint-config-airbnb-typescript": "latest",
     "eslint-plugin-es": "latest",
     "eslint-plugin-import": "latest",
     "eslint-plugin-jest": "latest",
+    "eslint-plugin-json": "latest",
     "eslint-plugin-jsx-a11y": "latest",
     "eslint-plugin-node": "latest",
     "eslint-plugin-react": "latest",
@@ -65,6 +87,8 @@
     "eslint-plugin-security": "latest",
     "jest": "latest",
     "nodemon": "latest",
-    "supertest": "latest"
+    "npm-run-all": "latest",
+    "supertest": "latest",
+    "ts-jest": "latest"
   }
 }
