--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 MONGO_DB_URI=mongodb://
+TEST_DB=monodb://
 GoogleClientSecret=
 HashString=
 AllowUrl={"urls": ["http://localhost:9000", "https://localhost:9000", "http://localhost:7000", "https://localhost:7000"]}
