--- a/package.json
+++ b/package.json
@@ -16,18 +16,20 @@
   "license": "MIT",
   "scripts": {
     "cc": "codeclimate analyze -f html > codeclimate.html",
-    "start:debug": "DEBUG=cfl-back:* nodemon index.js",
-    "postinstall": "./postinstallcflFront.sh && ./postinstallcaringChildDaycare.sh",
+    "rmrf": "rm -rf build && rm -rf cfl-front && rm -rf caring-child-daycare && rm -rf coverage",
+    "start": "node build/index.js",
+    "start:debug": "DEBUG=cfl-back:* nodemon build/index.js",
+    "ts-start": "concurrently \"yarn start:debug\" \"tsc -w\"",
+    "build:front": "./postinstallcflFront.sh && rm -rf ./cfl-front/src && rm -rf ./cfl-front/test ./postinstallcaringChildDaycare.sh && rm -rf ./caring-child-daycare/src && rm -rf ./caring-child-daycare/test",
+    "build:prod": "concurrently \"(cd cfl-front || exit; npm start -- build)\" \"(cd caring-child-daycare || exit; npm start -- build)\"",
+    "postinstall": "yarn rmrf && tsc && yarn build:front",
     "installglobals": "yarn global add npm@latest",
-    "dev": "nodemon index.js",
-    "build:prod": "(cd cfl-front || exit; npm start -- build)",
-    "start": "node index.js",
     "cleaninstall": "rm -rf yarn.lock && rm -rf node_modules && yarn cache clean && yarn install",
     "node:debug": "node --inspect-brk index.js",
-    "test": "eslint . && rm -rf coverage && npm run test:jest",
-    "test:lint": "eslint . --fix",
-    "test:local": "eslint . --fix && rm -rf coverage && yarn test:jest && yarn cc",
-    "test:jest": "cross-env NODE_ENV=test && jest --no-cache --config jest.config.json --notify --detectOpenHandles --forceExit"
+    "test": "eslint ./src && rm -rf coverage && npm run test:jest",
+    "test:lint": "eslint ./src --fix",
+    "test:local": "yarn test:lint && rm -rf coverage && yarn test:jest && yarn cc",
+    "test:jest": "jest --no-cache --config jest.config.json --runInBand --detectOpenHandles --forceExit"
   },
   "repository": {
     "type": "git",
@@ -36,9 +38,16 @@
   "author": "Rhayven <codingforllamas@gmail.com>",
   "dependencies": {
     "@sendgrid/mail": "^7.2.6",
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.7",
+    "@types/express-sslify": "^1.2.1",
+    "@types/helmet": "^0.0.47",
+    "@types/mongoose": "^5.7.31",
+    "@types/morgan": "^1.9.1",
     "bcryptjs": "latest",
     "bluebird": "latest",
     "body-parser": "latest",
+    "concurrently": "^5.2.0",
     "cors": "latest",
     "cross-env": "latest",
     "debug": "latest",
@@ -51,9 +60,11 @@
     "mongoose": "latest",
     "morgan": "latest",
     "nodemon": "latest",
-    "superagent": "latest"
+    "superagent": "latest",
+    "typescript": "latest"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.4",
     "eslint": "latest",
     "eslint-config-airbnb": "latest",
     "eslint-plugin-es": "latest",
@@ -66,6 +77,7 @@
     "eslint-plugin-security": "latest",
     "jest": "latest",
     "nodemon": "latest",
-    "supertest": "latest"
+    "supertest": "latest",
+    "ts-jest": "^26.1.2"
   }
 }
