--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "cc": "codeclimate analyze -f html > codeclimate.html",
     "rmrf": "rm -rf build && rm -rf cfl-front && rm -rf caring-child-daycare && rm -rf coverage",
     "start": "node build/index.js",
-    "start:debug": "DEBUG=cfl-back:* nodemon build/index.js",
-    "ts-start": "concurrently \"yarn start:debug\" \"tsc -w\"",
-    "build:front": "./postinstallcflFront.sh && rm -rf ./cfl-front/src && rm -rf ./cfl-front/test ./postinstallcaringChildDaycare.sh && rm -rf ./caring-child-daycare/src && rm -rf ./caring-child-daycare/test",
+    "start:debug": "concurrently \"yarn ts-start\" \"tsc -w\"",
+    "node:debug": "node --inspect-brk index.js",
+    "ts-start": "DEBUG=cfl-back:* nodemon build/index.js",
+    "build:front": "./postinstallcflFront.sh && rm -rf ./cfl-front/src && rm -rf ./cfl-front/test && ./postinstallcaringChildDaycare.sh && rm -rf ./caring-child-daycare/src && rm -rf ./caring-child-daycare/test",
     "build:prod": "concurrently \"(cd cfl-front || exit; npm start -- build)\" \"(cd caring-child-daycare || exit; npm start -- build)\"",
     "postinstall": "yarn rmrf && tsc && yarn build:front",
-    "installglobals": "yarn global add npm@latest",
     "cleaninstall": "rm -rf yarn.lock && rm -rf node_modules && yarn cache clean && yarn install",
-    "node:debug": "node --inspect-brk index.js",
+    "installglobals": "yarn global add npm@latest",
     "test": "eslint ./src && rm -rf coverage && npm run test:jest",
     "test:lint": "eslint ./src --fix",
     "test:local": "yarn test:lint && rm -rf coverage && yarn test:jest && yarn cc",
@@ -38,16 +38,16 @@
   "author": "Rhayven <codingforllamas@gmail.com>",
   "dependencies": {
     "@sendgrid/mail": "^7.2.6",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
+    "@types/debug": "^4.1.5",
     "@types/express": "^4.17.7",
     "@types/express-sslify": "^1.2.1",
     "@types/helmet": "^0.0.47",
     "@types/mongoose": "^5.7.31",
     "@types/morgan": "^1.9.1",
     "bcryptjs": "latest",
-    "bluebird": "latest",
     "body-parser": "latest",
-    "concurrently": "^5.2.0",
     "cors": "latest",
     "cross-env": "latest",
     "debug": "latest",
@@ -65,11 +65,17 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.4",
+    "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
+    "concurrently": "^5.2.0",
     "eslint": "latest",
     "eslint-config-airbnb": "latest",
+    "eslint-config-airbnb-typescript": "^8.0.2",
     "eslint-plugin-es": "latest",
     "eslint-plugin-import": "latest",
     "eslint-plugin-jest": "latest",
+    "eslint-plugin-json": "^2.1.1",
     "eslint-plugin-jsx-a11y": "latest",
     "eslint-plugin-node": "latest",
     "eslint-plugin-react": "latest",
