--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "cfl-back",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Coding for Llamas backend",
-  "main": "index.js",
+  "main": "index.ts",
   "engines": {
-    "node": ">14.3.0"
+    "node": ">14.13.0"
   },
   "files": [
-    "lib/",
     "model/",
-    "auth/",
-    "config.js",
-    "routes.js"
+    "config.ts",
+    "routes.ts"
   ],
   "license": "MIT",
   "scripts": {
@@ -37,15 +35,15 @@
   },
   "author": "Rhayven <codingforllamas@gmail.com>",
   "dependencies": {
-    "@sendgrid/mail": "^7.2.6",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.6",
-    "@types/debug": "^4.1.5",
-    "@types/express": "^4.17.7",
-    "@types/express-sslify": "^1.2.1",
-    "@types/helmet": "^0.0.47",
-    "@types/mongoose": "^5.7.31",
-    "@types/morgan": "^1.9.1",
+    "@sendgrid/mail": "latest",
+    "@types/bcryptjs": "latest",
+    "@types/cors": "latest",
+    "@types/debug": "latest",
+    "@types/express": "latest",
+    "@types/express-sslify": "latest",
+    "@types/helmet": "latest",
+    "@types/mongoose": "latest",
+    "@types/morgan": "latest",
     "bcryptjs": "latest",
     "body-parser": "latest",
     "cors": "latest",
@@ -64,18 +62,18 @@
     "typescript": "latest"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.4",
-    "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^3.6.1",
-    "@typescript-eslint/parser": "^3.6.1",
-    "concurrently": "^5.2.0",
+    "@types/jest": "latest",
+    "@types/supertest": "latest",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
+    "concurrently": "latest",
     "eslint": "latest",
     "eslint-config-airbnb": "latest",
-    "eslint-config-airbnb-typescript": "^8.0.2",
+    "eslint-config-airbnb-typescript": "latest",
     "eslint-plugin-es": "latest",
     "eslint-plugin-import": "latest",
     "eslint-plugin-jest": "latest",
-    "eslint-plugin-json": "^2.1.1",
+    "eslint-plugin-json": "latest",
     "eslint-plugin-jsx-a11y": "latest",
     "eslint-plugin-node": "latest",
     "eslint-plugin-react": "latest",
@@ -84,6 +82,6 @@
     "jest": "latest",
     "nodemon": "latest",
     "supertest": "latest",
-    "ts-jest": "^26.1.2"
+    "ts-jest": "latest"
   }
 }
