--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Coding for Llamas backend",
   "main": "index.ts",
   "engines": {
-    "node": ">=14.10.0"
+    "node": "15.14.0"
   },
   "files": [
     "model/",
