--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Coding for Llamas backend",
   "main": "index.ts",
   "engines": {
-    "node": ">=17.0.1"
+    "node": "16.8.0"
   },
   "files": [
     "model/",
