--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     environment:
       CC_TEST_REPORTER_ID: 5373c2ea0c700d377678cd14fe5f21ca2b90b0e96d5630c475d368c35cea28e0
     docker:
-      - image: circleci/node:stretch
+      - image: cimg/node:16.13.2-browsers
     working_directory: ~/repo
     steps:
       - checkout
@@ -14,23 +14,13 @@ jobs:
             curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
             chmod +x ./cc-test-reporter
       - run:
-          name:        Install Chromedriver latest version
-          command:     |
-            sudo apt-get update
-            sudo apt-get install lsb-release libappindicator3-1 fonts-liberation libasound2 libnspr4 libnss3 libxss1 xdg-utils
-            curl -L -o google-chrome.deb https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-            sudo dpkg -i google-chrome.deb
-            sudo sed -i 's|HERE/chrome"|HERE/chrome" --no-sandbox|g' /opt/google/chrome/google-chrome
-            rm google-chrome.deb
-      - run:
           name:        Test install
-          command:     'yarn cleaninstall'
+          command:     'npm install'
       - run:
           name:        run all tests
           command:     |
             ./cc-test-reporter before-build
-            yarn test
+            npm test
             ./cc-test-reporter after-build --coverage-input-type lcov --exit-code $?
       - store_artifacts:
           path:        coverage
-          prefix:      coverage
