--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "cc": "codeclimate analyze -f html > codeclimate.html",
     "ts-start": "DEBUG=cfl-back:* nodemon build/index.js",
     "installglobals": "npm install -g npm@latest && npm install -g snyk",
-    "build:front": "postinstallcflFront.sh && rm -rf ./cfl-front/src && rm -rf ./cfl-front/test && postinstallcaringChildDaycare.sh && rm -rf ./caring-child-daycare/src && rm -rf ./caring-child-daycare/test",
-    "rebuild:front": "postinstallcflFront.sh && postinstallcaringChildDaycare.sh && npm run build:prod",
-    "postinstall": "npm run rmrf && tsc && npm run build:front",
-    "build:prod": "cd cfl-front || exit; npm start -- build && cd caring-child-daycare || exit; npm start -- build",
+    "build:front:cfl": "postinstallcflFront.sh && rm -rf ./cfl-front/src && rm -rf ./cfl-front/test",
+    "build:front:ccd": "postinstallcaringChildDaycare.sh && rm -rf ./caring-child-daycare/src && rm -rf ./caring-child-daycare/test",
+    "rebuild:front:cfl": "postinstallcflFront.sh && npm run build:prod",
+    "rebuild:front:ccd": "postinstallcaringChildDaycare.sh && npm run build:prod",
+    "postinstall": "npm run rmrf && tsc && npm run build:front:cfl && npm run build:front:ccd",
+    "build:prod:cfl": "cd cfl-front || exit; npm start -- build",
+    "build:prod:ccd": "cd caring-child-daycare || exit; npm start -- build",
     "start": "node build/index.js",
     "cleaninstall": "rm -rf yarn.lock && rm -rf node_modules && rm -rf package-lock.json && npm cache clean --force && npm install",
     "node:debug": "node --inspect-brk index.js",
