--- a/package.json
+++ b/package.json
@@ -15,26 +15,21 @@
   ],
   "license": "MIT",
   "scripts": {
-    "rmrf": "rm -rf build && rm -rf cfl-front && rm -rf caring-child-daycare && rm -rf coverage",
-    "start:debug": "rm -rf build && tsc && npm-run-all -p ts-start ts-watch",
-    "ts-watch": "tsc -w",
     "cc": "codeclimate analyze -f html > codeclimate.html",
-    "ts-start": "DEBUG=cfl-back:* nodemon build/index.js",
-    "installglobals": "npm install -g npm@latest && npm install -g snyk",
-    "build:front:cfl": "./postinstallcflFront.sh && rm -rf ./cfl-front/src && rm -rf ./cfl-front/test",
-    "build:front:ccd": "./postinstallcaringChildDaycare.sh && rm -rf ./caring-child-daycare/src && rm -rf ./caring-child-daycare/test",
-    "rebuild:front:cfl": "./postinstallcflFront.sh && npm run build:prod",
-    "rebuild:front:ccd": "./postinstallcaringChildDaycare.sh && npm run build:prod",
-    "postinstall": "npm run rmrf && tsc && npm run build:front:cfl && npm run build:front:ccd",
-    "build:prod:cfl": "cd cfl-front || exit; npm start -- build",
-    "build:prod:ccd": "cd caring-child-daycare || exit; npm start -- build",
+    "rmrf": "rm -rf build && rm -rf cfl-front && rm -rf caring-child-daycare && rm -rf coverage",
     "start": "node build/index.js",
-    "cleaninstall": "rm -rf yarn.lock && rm -rf node_modules && rm -rf package-lock.json && npm cache clean --force && npm install",
+    "start:debug": "concurrently \"npm run ts-start\" \"tsc -w\"",
     "node:debug": "node --inspect-brk index.js",
+    "ts-start": "DEBUG=cfl-back:* nodemon build/index.js",
+    "build:front": "./postinstallcflFront.sh && rm -rf ./cfl-front/src && rm -rf ./cfl-front/test && ./postinstallcaringChildDaycare.sh && rm -rf ./caring-child-daycare/src && rm -rf ./caring-child-daycare/test",
+    "build:prod": "concurrently \"(cd cfl-front || exit; npm start -- build)\" \"(cd caring-child-daycare || exit; npm start -- build)\"",
+    "postinstall": "npm run rmrf && tsc && npm run build:front",
+    "cleaninstall": "rm -rf yarn.lock && rm -rf node_modules && npm run cache clean && npm install",
+    "installglobals": "npm install -g npm@latest && npm install -g snyk",
     "test": "eslint ./src && rm -rf coverage && npm run test:jest",
     "test:lint": "eslint ./src --fix",
     "test:local": "npm run test:lint && rm -rf coverage && npm run test:jest && npm run cc",
-    "test:jest": "jest --no-cache --config jest.config.json --runInBand --forceExit"
+    "test:jest": "jest --no-cache --config jest.config.json --runInBand --detectOpenHandles --forceExit"
   },
   "repository": {
     "type": "git",
@@ -74,6 +69,7 @@
     "@types/supertest": "latest",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
+    "concurrently": "^7.0.0",
     "eslint": "latest",
     "eslint-config-airbnb": "latest",
     "eslint-config-airbnb-typescript": "latest",
@@ -88,7 +84,6 @@
     "eslint-plugin-security": "latest",
     "jest": "latest",
     "nodemon": "latest",
-    "npm-run-all": "latest",
     "supertest": "latest",
     "ts-jest": "latest"
   }
