--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
           name:        run all tests
           command:     |
             ./cc-test-reporter before-build
-            npm test
+            npm run test
             ./cc-test-reporter after-build --coverage-input-type lcov --exit-code $?
       - store_artifacts:
           path:        coverage
