--- a/package.json
+++ b/package.json
@@ -15,19 +15,16 @@
   ],
   "license": "MIT",
   "scripts": {
-    "rmrf": "rm -rf build && rm -rf cfl-front && rm -rf caring-child-daycare && rm -rf coverage",
+    "rmrf": "rm -rf build && rm -rf cfl-front && rm -rf coverage",
     "start:debug": "rm -rf build && tsc && npm-run-all -p ts-start ts-watch",
     "ts-watch": "tsc -w",
     "cc": "codeclimate analyze -f html > codeclimate.html",
     "ts-start": "DEBUG=cfl-back:* nodemon build/index.js",
     "installglobals": "npm install -g npm@latest && npm install -g snyk",
-    "build:front": "./postinstallcflFront.sh && rm -rf ./cfl-front/src && rm -rf ./cfl-front/test && ./postinstallcaringChildDaycare.sh && rm -rf ./caring-child-daycare/src && rm -rf ./caring-child-daycare/test",
-    "build:front:windows": "postinstallcflFront.sh && rm -rf ./cfl-front/src && rm -rf ./cfl-front/test && postinstallcaringChildDaycare.sh && rm -rf ./caring-child-daycare/src && rm -rf ./caring-child-daycare/test",
+    "build:front": "./postinstallcflFront.sh && rm -rf ./cfl-front/src && rm -rf ./cfl-front/test",
     "postinstall": "npm run rmrf && tsc && npm run build:front",
-    "rebuild:front": "./postinstallcflFront.sh && ./postinstallcaringChildDaycare.sh && npm run build:prod",
-    "build:cfl": "(cd cfl-front || exit; npm start -- build)",
-    "build:ccd": "(cd caring-child-daycare || exit; npm start -- build",
-    "build:prod": "npm-run-all -p build:cfl build:ccd",
+    "rebuild:front": "./postinstallcflFront.sh && npm run build:prod",
+    "build:prod": "(cd cfl-front || exit; npm start -- build)",
     "start": "node build/index.js",
     "cleaninstall": "rm -rf yarn.lock && rm -rf node_modules && rm -rf package-lock.json && npm cache clean --force && npm install",
     "node:debug": "node --inspect-brk index.js",
