--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Coding for Llamas backend",
   "main": "index.ts",
   "engines": {
-    "node": "16.13.2"
+    "node": ">=16.13.2 <17",
+    "npm": ">=8.3.0 <9"
   },
   "files": [
     "lib/",
@@ -23,10 +24,8 @@
     "installglobals": "npm install -g npm@latest && npm install -g snyk",
     "build:front": "./postinstallcflFront.sh && rm -rf ./cfl-front/src && rm -rf ./cfl-front/test && ./postinstallcaringChildDaycare.sh && rm -rf ./caring-child-daycare/src && rm -rf ./caring-child-daycare/test",
     "postinstall": "npm run rmrf && tsc && npm run build:front",
-    "rebuild:front": "./postinstallcflFront.sh && npm run build:prod && ./postinstallcaringChildDaycare.sh && npm run build:prod",
-    "build:prod": "(cd cfl-front || exit; npm start -- build) && (cd caring-child-daycare || exit; npm start -- build)",
     "start": "node build/index.js",
-    "cleaninstall": "rm -rf yarn.lock && rm -rf node_modules && rm -rf package-lock.json && npm cache clean --force && npm install",
+    "cleaninstall": "rm -rf yarn.lock && rm -rf node_modules && rm -rf package-lock.json && npm install -g npm@latest && npm run rmrf && npm cache clean --force && npm install",
     "node:debug": "node --inspect-brk index.js",
     "test": "eslint ./src && rm -rf coverage && npm run test:jest",
     "test:lint": "eslint ./src --fix",
